--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,16 @@ app:
   port: 8000
 
 db:
-  driver: "mysql"
-  host: "127.0.0.1"
-  port: 3306
-  username: root
-  password: admin123
+  # driver: "mysql"
+  # host: "127.0.0.1"
+  # port: 3306
+  # username: root
+  # password: admin123
+  # database:  bank
+
+  driver: "postgres"
+  host: "localhost"
+  port: 5432
+  username: postgres
+  password: admin1234
   database:  bank
